cluster/media/lidarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
  labels:
    app: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: lidarr
          image: cr.hotio.dev/hotio/lidarr:testing@sha256:53040cc79fd91db8f5548f44c334d3a9ebef97538fc4812e79400f4ce1034b2e
          ports:
            - containerPort: 8686
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: media
              mountPath: /media
          livenessProbe:
            httpGet:
              path: /
              port: 8686
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: media
          persistentVolumeClaim:
            claimName: media
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  selector:
    app: lidarr
  ports:
    - protocol: TCP
      port: 8686
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - lidarr.luma.chrismiller.xyz
      secretName: lidarr-luma-tls
  rules:
    - host: lidarr.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 8686
